# ControlCenter

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
qml/: Main.qml
